# game-of-life

./: .gitignore  Cargo.toml  LICENSE_MIT
benches/: allocation_free_tick.txt  bench.rs  flat_cell_array_tick.txt  simple_tick.txt  tick_no_alloc_no_changed.txt  tick_with_changed.txt  unsafe_tick.txt
benches/criterion/: unsafe_tick.txt
benches/small_universe/: tick_no_alloc_no_changed.txt  universe_tick_initial.txt  universe_tick_opt_if.txt  universe_tick_optimised.txt
benches/tick_large_universe/: simple_alloc_free_tick.txt
src/: lib.rs  neighbour_iter.rs  timer.rs
tests/: web.rs
www/: index.html  index.js  package-lock.json
www/modules/: webgl-utilities.js  webgl.js
