[package]
name = "game-of-life"
version = "0.1.0"
authors = ["William Train <William.Train@ametek.com>"]
edition = "2018"

[lib]
# crate-type = ["cdylib", "rlib"]
crate-type = ["rlib"]

[features]
default = ["console_error_panic_hook"]
benchmarking = []

[dependencies]
# wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
fixedbitset = "0.5.7"
js-sys = "0.3.76"
rand = "0.8.5"

# [dependencies.web-sys]
# version = "0.3.76"
# features = [
#    "console",
# ]

[dev-dependencies]
# wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
